# cppgraphqlgen

./: CMakeLists.txt
cmake/Hunter/: config.cmake
src/: CMakeLists.txt
